# cmake-101

./: .gitignore  .gitmodules  README.md  a.cpp
src/: CMakeLists.txt  a.cpp  main.cpp
src/protos/: CMakeLists.txt  Person.proto  SuperMan.proto
src/utils/: math.cpp  math.h
